Abbreviate column headers in index.html

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                         <thead>
                             <tr>
                                 <th>Descripción</th>
-                                <th>Precio Detal</th>
-                                <th>Precio Mayorista</th>
+                                <th>P.Detal</th>
+                                <th>P.Mayorista</th>
                                 <th>Acciones</th>
                             </tr>
                         </thead>
