Shorten labels for retail and wholesale prices

--- a/index.html
+++ b/index.html
@@ -342,9 +342,9 @@
                 <input type="hidden" id="product-id">
                 <label for="product-description">Descripción:</label>
                 <input type="text" id="product-description" required>
-                <label for="product-retail-price">Precio Detal:</label>
+                <label for="product-retail-price">P.Detal:</label>
                 <input type="number" id="product-retail-price" step="0.01" required>
-                <label for="product-wholesale-price">Precio Mayorista:</label>
+                <label for="product-wholesale-price">P.Mayor:</label>
                 <input type="number" id="product-wholesale-price" step="0.01" required>
                 <button type="submit" class="btn-primary">Guardar Producto</button>
             </form>
